added welcome message to the index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
      <h1>Calculation app</h1>
 </head>
 <body>
-    creating an app to do calculations easily
+    Welcome to the Calculator app!!!!!!
 </body>
 </html>
