--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
      <h1>Calculation app</h1>
 </head>
 <body>
-    Welcome to the Calculator app!!!!!!
+    <h1>welcomegit status</h1>
 </body>
 </html>
